@@ -157,11 +157,13 @@ public class WorldChannel {
 		worldComm.sendChannelChangeRequest(destCh, p);
 	}
 
-	public void performChannelChange(int playerId, byte destination) {
+	public void performChannelChange(int playerId) {
+		Pair<Byte, ScheduledFuture<?>> channelChangeState = queuedChannelChanges.remove(Integer.valueOf(playerId));
+		channelChangeState.right.cancel(false);
 		byte[] destHost;
 		int destPort;
 		try {
-			Pair<byte[], Integer> hostAndPort = worldComm.getChannelHost(destination);
+			Pair<byte[], Integer> hostAndPort = worldComm.getChannelHost(channelChangeState.left.byteValue());
 			destHost = hostAndPort.left;
 			destPort = hostAndPort.right.intValue();
 		} catch (UnknownHostException e) {
@@ -176,12 +178,6 @@ public class WorldChannel {
 		} else {
 			channelChangeError(p);
 		}
-	}
-
-	public void performChannelChange(int playerId) {
-		Pair<Byte, ScheduledFuture<?>> channelChangeState = queuedChannelChanges.remove(Integer.valueOf(playerId));
-		channelChangeState.right.cancel(false);
-		performChannelChange(playerId, channelChangeState.left.byteValue());
 	}
 
 	public void storePlayerBuffs(int playerId, PlayerContinuation context) {
